- add implement two methods